--- a/hi.mdx
+++ b/hi.mdx
@@ -3,6 +3,8 @@ title: Hi! I am Sri Nikitha
 sidebarTitle: "About Me"
 ---
 
-I'm a full-time problem solver and a part-time product manager, working across B2B dev tools, industrial waste management, and grassroots innovation.
+I'm a full-time problem solver and a part-time product manager, working across B2B dev tools, industrial waste management, and grassroots innovation for the last 7+ years.
 
 Lately, I've been fascinated with how the DevOps space is progressing and work as a PM + GTM consultant with [Mantis AI](https://getmantis.ai/).
+
+I also just became a mother a year ago to my daughter Advaita and found new meaning in life beyond my B2B SaaS passion :)
