--- a/fun.mdx
+++ b/fun.mdx
@@ -1,11 +1,11 @@
 ---
-title: Hi! I am Chaman
+title: Hi! I am Sri Nikitha
 sidebarTitle: "Fun"
 ---
 
 I'm a full-time problem solver and a part-time product manager, working across B2B dev tools, industrial waste management, and grassroots innovation for the last 7+ years.
 
-Lately, I've been fascinated with how the DevOps space is progressing and work as a PM + GTM consultant with [Mantis AI](https://getmantis.ai/).
+Lately, I've been fascinated with how the AI can affect DevOps workflows and work as a PM + GTM consultant with [Mantis AI](https://getmantis.ai/).
 
 <Frame>
 <img src="/images/advaita.jpg" width="400" />
