editing about me

--- a/fun.mdx
+++ b/fun.mdx
@@ -8,12 +8,8 @@ I'm a full-time problem solver and a part-time product manager, working across B
 Lately, I've been fascinated with how the AI can affect DevOps workflows and work as a PM + GTM consultant with [Mantis AI](https://getmantis.ai/).
 
 <Frame>
-<img src="/images/advaita.jpg" width="400" />
+<img src="/images/srinikitha@vietnam.jpg" width="400" />
 </Frame>
-
-I also just became a mother a year ago to my daughter Advaita and found new meaning in life beyond my B2B SaaS passion :)
-
-I am a Vipassan practitioner and live in HSR, Bengaluru.
 
 ## My Background
 
@@ -23,24 +19,20 @@ Here's some more context about me that may help you form a better image about me
 <img src="/images/logos.png" width="600" />
 </Frame>
 
-- I was born in [Jagtial, Telangana](https://en.wikipedia.org/wiki/Jagtial) in 1995 - youngest of 3 siblings.
-- We had our own house, but were particularly without money, so for about the first 12 years of my life, my father mostly stayed in Hyderabad trying to make money and my mother rolled beedis to pay for our school fees.
-- I have a benign spinal tumour and got my first surgery in 2000 and second one in 2017 (it seems to be ok now)
-- I moved to Hyderabad in 2007, stayed around [Ramanthapur](https://en.wikipedia.org/wiki/Ramanthapur) and studied at [Brillian Grammar High School](https://www.linkedin.com/company/brilliantgrammarhighschool)
-- Had the first pizza of my life in 2011 from Domino's when my sister got her first salary. (Did not like it at all)
-- Went to [Narayana for Junior College](https://en.wikipedia.org/wiki/Narayana_Group_of_Educational_Institutions) and grinded JEE
-- Got into IIT Kharagpur in the Metallurgical & Material Sciences branch on a Merit-cum-means scholarship
-- I studied and chilled at KGP - got interested in liberal arts, society, etc and then went to Ashoka University's Young India Fellowship program
-- ...
+- First generation to be educated and earn a degree.
+- Heard the story of Sintex(Almost bankrupted pipe manufacturer started making overhead tanks because of an IITian) and wanted to become an IITian to solve problems like those.
+- Worked in - manufacturing, government, sustainability, B2B SaaS, developer tools
+- Inherently inquisitive to learn different things to solve any kind of problems.
+- Recently became a mother, figuring my shit out and realising how mothers are a different breed
 
 ## Why I am PM
-- ...
-
-## My Style of Working
-- ...
+- Talking to users and figuring out what they need is my favourite
+- And, ofcourse, I love to build things
 
 ## Books/Articles I Like
-- ...
+- The Little Prince
+- The Art of Learning(my latest read)
+- Alchemist
 
 ## Movies I Like
-- ...
+- Three Idiots(Got so influenced that I got a job to work with Sonam Wangchuk)
