--- a/aboutme.mdx
+++ b/aboutme.mdx
@@ -1,6 +1,6 @@
 ---
 title: Hi! I am Sri Nikitha
-sidebarTitle: "Fun"
+sidebarTitle: "About Me"
 ---
 
 I'm a full-time problem solver and a part-time product manager, working across B2B dev tools, industrial waste management, and grassroots innovation for the last 7+ years.
