--- a/work.mdx
+++ b/work.mdx
@@ -2,4 +2,20 @@
 title: Work
 sidebarTitle: Work
 ---
+People often ask why do you have short stints in your work history. I say, it just happened that way. I did not have an intent to leave it. But, I have been making a difference and creating a lasting impact in every place I have been.
 
+## Senior Executive at NRB Bearings
+I started my career at NRB Bearings where I was working as a Senior Executive for their Center for Process Innovation and Sustainable Development(CPISD). I was working on innovating process and ensuring the sustainability along with ensuring the quality. 
+
+I think I was able to make a difference because even today after 7 years of leaving the company, I am still being called by my colleagues. But sadly, I faced sexual harassment(an old man showed me a video and said "Figure accha hai na?" and being chased by shopfloor workers outside work a couple of times, many times I had to hear comments on my hair, my figure, my weight etc.) And, the worst part, I did not complain.
+
+
+Then, I applied to Shell, Reliance etc for working on their sustainability projects. I could not get a similar job.
+
+##Innovation Fellow at Government of Telangana
+I was one of the 6 fellows(out of 1000+ applicants) selected for the Innovation Fellowship program by the Government of Telangana. We were given 6-7 mandates to choose - school innovation, investor ecosystem, hyderabad startup ecosystem, grassroots innovation, etc. I chose grassroots innovation and worked with Palle Srujana and many other organizations to promote innovation in tier 2/3 cities of Telangana. I would say this was one of the most fulfilling experiences of my life. I got to create impact in the lives of many people. That's the power of the government - if you have will and support, you can do so much.
+
+One day I was waiting for a friend in IIIT Hyderabad, and some stranger approached me asking if I was Sri Nikitha and I said yes. He said that I did an entrepreneurship drive in their city and he was selected for the CIE incubator program. Now, he is building his startup and I changed his life. He saluted me and left. I got tears in my eyes. 
+
+All the while when I was applying for Masters and jobs after the fellowship, I had self doubt and imposter syndrome. This small gesture of a stranger helped me realise that I am doing something good.
+During the fellowship, I collaborated with the Invest India,Office of Scientific Advisor, Ministry of External Affairs, NGOs, startups, founders, investors, etc. to design programs, implement them and create impact.
