--- a/work.mdx
+++ b/work.mdx
@@ -18,5 +18,21 @@ I was one of the 6 fellows(out of 1000+ applicants) selected for the Innovation 
 
 One day I was waiting for a friend in IIIT Hyderabad, and some stranger approached me asking if I was Sri Nikitha and I said yes. He said that I did an entrepreneurship drive in their city and he was selected for the CIE incubator program. Now, he is building his startup and I changed his life. He saluted me and left. I got tears in my eyes. 
 
-All the while when I was applying for Masters and jobs after the fellowship, I had self doubt and imposter syndrome. This small gesture of a stranger helped me realise that I am doing something good.
-During the fellowship, I collaborated with the Invest India,Office of Scientific Advisor, Ministry of External Affairs, NGOs, startups, founders, investors, etc. to design programs, implement them and create impact.
+All the while when I was applying for Masters and jobs after the fellowship, I had self doubt and imposter syndrome. I thought I did nothing in my life. This small gesture of a stranger helped me realise that I did something great.
+During the fellowship, I collaborated with the Invest India,Office of Scientific Advisor, Ministry of External Affairs, NGOs, startups, founders, investors, etc. to design programs, implement them in 31+ districts, 30+ colleges and impacted 10000+ aspiring entrepreneurs by creating a network of mentors, incubators and system to support them. 
+
+Infact, today, the programs and campaigns I have designed are still being implemented. And, it's the only state with Grassroots Innovation Policy and movies made on two innovators - Mallesham and Shanmukha. I wanted to make innovation - a household word and I want being called an Innovator should be something of pride. I think my mission is being pursued and fulfilled to some extent.
+
+## Incoming student at MS in Sustainable Systems, University of Michigan, Ann Arbor
+
+Covid hit and many scholarships discontinued for that year. The job roles of people after the course did not excite me. 
+
+And, during this time, I was working on building something like Rangde or Kickstart for frugal innovation. I couldn't find any viable solution there.
+
+## Senior Consultant at Five Elements SDG
+
+I used to coldcall hundreds of manufacturers through IndiaMart for giving an order to manufacture Dies to make fiberglass composite material structures for sustainable housing for French company.
+
+It was crazy experience and now I know who are the manufacturers and main players in the fiberglass and composite markets.
+
+# Product Growth, Mason 
