adding some more work

--- a/work.mdx
+++ b/work.mdx
@@ -35,4 +35,18 @@ I used to coldcall hundreds of manufacturers through IndiaMart for giving an ord
 
 It was crazy experience and now I know who are the manufacturers and main players in the fiberglass and composite markets.
 
-# Product Growth, Mason 
+## Product Growth, Mason 
+
+Somehow, this team has helped me to get confident in my own skin. I worked on marketing, community and random startup things with stellar team. Infact, our team launched two products on Product Hunt and we have been awarded Product of the Year -eCommerce category.
+
+## Product Manager, Facets.cloud
+
+I believe in chances and I was given such a chances at Facets. Facets is an Internal Developer Platform for automating devops workflows. On my first day I asked what is cloud infrastructure and to that extent I was clueless about the field. And, I was the founding product manager. 
+
+My style of working - learn and be inquisitive. I did some courses, talked to the engineers in the team and talked to our customers to learn about Devops from practitioners pov.
+
+I realised that my strength is that I can thrive in any field given that I'm put to solve problems.
+
+## Product Consultant, Mantis
+
+Learning AI and building AI workflows to build website, products, marketing collaterals and what not.
