--- a/work.mdx
+++ b/work.mdx
@@ -2,51 +2,39 @@
 title: Work
 sidebarTitle: Work
 ---
-People often ask why do you have short stints in your work history. I say, it just happened that way. I did not have an intent to leave it. But, I have been making a difference and creating a lasting impact in every place I have been.
+# My Journey in Building Impactful Products
+I've always been driven by two things: solving meaningful problems and creating lasting impact. My path has taken me from manufacturing floors to government innovation programs, and finally to the heart of developer tooling and AI products. Each role has added a unique perspective to how I approach product challenges.
+## Current Adventures in Tech
+### Building Developer Tools at Facets.cloud
+The best stories often start with a moment of complete honesty. On my first day as the founding Product Manager at Facets.cloud, I asked "What exactly is cloud infrastructure?" Yes, really! But that's exactly what makes this journey special.
+I dove headfirst into the world of DevOps and cloud infrastructure. Through countless conversations with engineers, intensive learning sessions, and direct customer interactions, I transformed from someone who didn't know Kubernetes from containers to a PM leading the vision for an Internal Developer Platform.
+What made this possible? An insatiable curiosity and a methodology I've refined over years: learn deeply, question constantly, and always start with the user's pain points. Working alongside brilliant engineers, we've built solutions that are fundamentally changing how development teams work with their infrastructure.
 
-## Senior Executive at NRB Bearings
-I started my career at NRB Bearings where I was working as a Senior Executive for their Center for Process Innovation and Sustainable Development(CPISD). I was working on innovating process and ensuring the sustainability along with ensuring the quality. 
+### Crafting Product Experiences at Mason
+At Mason, I found my groove in a team that helped me become more confident and experimental. We didn't just build products - we crafted experiences that resonated with our community. Our team's dedication led to two successful Product Hunt launches, culminating in winning Product of the Year in the eCommerce category.
 
-I think I was able to make a difference because even today after 7 years of leaving the company, I am still being called by my colleagues. But sadly, I faced sexual harassment(an old man showed me a video and said "Figure accha hai na?" and being chased by shopfloor workers outside work a couple of times, many times I had to hear comments on my hair, my figure, my weight etc.) And, the worst part, I did not complain.
+### The Government Innovation Chapter
+My time as an Innovation Fellow with the Government of Telangana stands as a testament to what's possible when vision meets scale. Selected as one of 6 fellows from over 1000 applicants, I chose to focus on grassroots innovation - a decision that would lead to some of my most fulfilling work.
+We didn't just run programs; we transformed how innovation was perceived in tier 2/3 cities. Working across 31+ districts and 30+ colleges, we built a network that supported over 10,000 aspiring entrepreneurs. The impact? Today, Telangana stands as the only state with a dedicated Grassroots Innovation Policy, and our programs continue to nurture new innovators. The impact of our work reached far beyond state borders - Netflix commissioned a movie based on one of our innovators' stories, bringing grassroots innovation to a global audience. Another innovator's work caught international attention, leading to the Ministry of External Affairs commissioning them to gift their innovation to the Government of Kenya, showcasing India's grassroots innovation on the global stage.
+One of my proudest achievements was seeing innovation become a household word in these communities. When an entrepreneur from a small city told me years later that our program had changed his life and led to his startup being incubated at CIE, I knew we had created something truly meaningful.
 
+## Early Career Foundations
+### Manufacturing Innovation at NRB Bearings
+At NRB Bearings' Center for Process Innovation and Sustainable Development, I learned the fundamentals of process improvement and sustainable development. Working on the manufacturing floor taught me valuable lessons about quality, efficiency, and the importance of user-centered design - principles that still influence my product decisions today.
+### Sustainable Development at Five Elements SDG
+My role at Five Elements SDG exposed me to the challenges of sustainable housing and manufacturing. Through extensive market research and vendor partnerships for fiberglass composite materials, I gained insights into how products come to life from concept to manufacturing - knowledge that proves invaluable in my product management journey.
 
-Then, I applied to Shell, Reliance etc for working on their sustainability projects. I could not get a similar job.
+## The AI Frontier
+Currently, as a Product Consultant at Mantis, I'm exploring the fascinating world of AI workflows. We're building systems that automate website development, product creation, and marketing collateral generation - pushing the boundaries of what's possible with AI integration.
 
-## Innovation Fellow at Government of Telangana
+## What I've Learned
+Through this journey, I've discovered that my superpower is the ability to thrive in any domain by:
 
-I was one of the 6 fellows(out of 1000+ applicants) selected for the Innovation Fellowship program by the Government of Telangana. We were given 6-7 mandates to choose - school innovation, investor ecosystem, hyderabad startup ecosystem, grassroots innovation, etc. I chose grassroots innovation and worked with Palle Srujana and many other organizations to promote innovation in tier 2/3 cities of Telangana. I would say this was one of the most fulfilling experiences of my life. I got to create impact in the lives of many people. That's the power of the government - if you have will and support, you can do so much.
+Approaching each challenge with genuine curiosity and a structured learning mindset
+Building bridges between technical complexity and user needs
+Creating systems and processes that outlast my involvement
+Turning vision into reality through careful program design and execution
 
-One day I was waiting for a friend in IIIT Hyderabad, and some stranger approached me asking if I was Sri Nikitha and I said yes. He said that I did an entrepreneurship drive in their city and he was selected for the CIE incubator program. Now, he is building his startup and I changed his life. He saluted me and left. I got tears in my eyes. 
+Every role has reinforced my belief that the best products come from a deep understanding of user problems, combined with the technical knowledge to solve them effectively. Whether it's developer tools, government programs, or AI solutions, the fundamental principle remains: create lasting impact by solving real problems for real people.
 
-All the while when I was applying for Masters and jobs after the fellowship, I had self doubt and imposter syndrome. I thought I did nothing in my life. This small gesture of a stranger helped me realise that I did something great.
-During the fellowship, I collaborated with the Invest India,Office of Scientific Advisor, Ministry of External Affairs, NGOs, startups, founders, investors, etc. to design programs, implement them in 31+ districts, 30+ colleges and impacted 10000+ aspiring entrepreneurs by creating a network of mentors, incubators and system to support them. 
-
-Infact, today, the programs and campaigns I have designed are still being implemented. And, it's the only state with Grassroots Innovation Policy and movies made on two innovators - Mallesham and Shanmukha. I wanted to make innovation - a household word and I want being called an Innovator should be something of pride. I think my mission is being pursued and fulfilled to some extent.
-
-## Incoming student at MS in Sustainable Systems, University of Michigan, Ann Arbor
-
-Covid hit and many scholarships discontinued for that year. The job roles of people after the course did not excite me. 
-
-And, during this time, I was working on building something like Rangde or Kickstart for frugal innovation. I couldn't find any viable solution there.
-
-## Senior Consultant at Five Elements SDG
-
-I used to coldcall hundreds of manufacturers through IndiaMart for giving an order to manufacture Dies to make fiberglass composite material structures for sustainable housing for French company.
-
-It was crazy experience and now I know who are the manufacturers and main players in the fiberglass and composite markets.
-
-## Product Growth, Mason 
-
-Somehow, this team has helped me to get confident in my own skin. I worked on marketing, community and random startup things with stellar team. Infact, our team launched two products on Product Hunt and we have been awarded Product of the Year -eCommerce category.
-
-## Product Manager, Facets.cloud
-
-I believe in chances and I was given such a chances at Facets. Facets is an Internal Developer Platform for automating devops workflows. On my first day I asked what is cloud infrastructure and to that extent I was clueless about the field. And, I was the founding product manager. 
-
-My style of working - learn and be inquisitive. I did some courses, talked to the engineers in the team and talked to our customers to learn about Devops from practitioners pov.
-
-I realised that my strength is that I can thrive in any field given that I'm put to solve problems.
-
-## Product Consultant, Mantis
-
-Learning AI and building AI workflows to build website, products, marketing collaterals and what not.
+Want to discuss product development, innovation, or how we might collaborate? I'd love to connect!##
