--- a/work.mdx
+++ b/work.mdx
@@ -30,10 +30,10 @@ Currently, as a Product Consultant at Mantis, I'm exploring the fascinating worl
 ## What I've Learned
 Through this journey, I've discovered that my superpower is the ability to thrive in any domain by:
 
-Approaching each challenge with genuine curiosity and a structured learning mindset
-Building bridges between technical complexity and user needs
-Creating systems and processes that outlast my involvement
-Turning vision into reality through careful program design and execution
+- Approaching each challenge with genuine curiosity and a structured learning mindset
+- Building bridges between technical complexity and user needs
+- Creating systems and processes that outlast my involvement
+- Turning vision into reality through careful program design and execution
 
 Every role has reinforced my belief that the best products come from a deep understanding of user problems, combined with the technical knowledge to solve them effectively. Whether it's developer tools, government programs, or AI solutions, the fundamental principle remains: create lasting impact by solving real problems for real people.
 
