--- a/work.mdx
+++ b/work.mdx
@@ -1,10 +1,11 @@
 ---
-title: Work
+title: My Journey
 sidebarTitle: Work
 ---
-# My Journey in Building Impactful Products
+
 I've always been driven by two things: solving meaningful problems and creating lasting impact. My path has taken me from manufacturing floors to government innovation programs, and finally to the heart of developer tooling and AI products. Each role has added a unique perspective to how I approach product challenges.
 ## Current Adventures in Tech
+
 ### Building Developer Tools at Facets.cloud
 The best stories often start with a moment of complete honesty. On my first day as the founding Product Manager at Facets.cloud, I asked "What exactly is cloud infrastructure?" Yes, really! But that's exactly what makes this journey special.
 I dove headfirst into the world of DevOps and cloud infrastructure. Through countless conversations with engineers, intensive learning sessions, and direct customer interactions, I transformed from someone who didn't know Kubernetes from containers to a PM leading the vision for an Internal Developer Platform.
@@ -19,8 +20,10 @@ We didn't just run programs; we transformed how innovation was perceived in tier
 One of my proudest achievements was seeing innovation become a household word in these communities. When an entrepreneur from a small city told me years later that our program had changed his life and led to his startup being incubated at CIE, I knew we had created something truly meaningful.
 
 ## Early Career Foundations
+
 ### Manufacturing Innovation at NRB Bearings
 At NRB Bearings' Center for Process Innovation and Sustainable Development, I learned the fundamentals of process improvement and sustainable development. Working on the manufacturing floor taught me valuable lessons about quality, efficiency, and the importance of user-centered design - principles that still influence my product decisions today.
+
 ### Sustainable Development at Five Elements SDG
 My role at Five Elements SDG exposed me to the challenges of sustainable housing and manufacturing. Through extensive market research and vendor partnerships for fiberglass composite materials, I gained insights into how products come to life from concept to manufacturing - knowledge that proves invaluable in my product management journey.
 
