--- a/work.mdx
+++ b/work.mdx
@@ -39,4 +39,4 @@ Through this journey, I've discovered that my superpower is the ability to thriv
 
 Every role has reinforced my belief that the best products come from a deep understanding of user problems, combined with the technical knowledge to solve them effectively. Whether it's developer tools, government programs, or AI solutions, the fundamental principle remains: create lasting impact by solving real problems for real people.
 
-Want to discuss product development, innovation, or how we might collaborate? I'd love to connect!##
+Want to discuss product development, innovation, or how we might collaborate? I'd love to connect!
