--- a/work.mdx
+++ b/work.mdx
@@ -1,43 +1,54 @@
 ---
-title: My Journey
+title: Connecting the Dots
 sidebarTitle: Work
 ---
 
-I've always been driven by two things: solving meaningful problems and creating lasting impact. My path has taken me from manufacturing floors to government innovation programs, and finally to the heart of developer tooling and AI products. Each role has added a unique perspective to how I approach product challenges.
-## Current Adventures in Tech
+People often ask me about my journey - how I went from manufacturing to government innovation to product management. I just say what Steve Jobs once said, “you can't connect the dots looking forward, you can only connect them looking backward.”  
 
-### Building Developer Tools at Facets.cloud
-The best stories often start with a moment of complete honesty. On my first day as the founding Product Manager at Facets.cloud, I asked "What exactly is cloud infrastructure?" Yes, really! But that's exactly what makes this journey special.
-I dove headfirst into the world of DevOps and cloud infrastructure. Through countless conversations with engineers, intensive learning sessions, and direct customer interactions, I transformed from someone who didn't know Kubernetes from containers to a PM leading the vision for an Internal Developer Platform.
-What made this possible? An insatiable curiosity and a methodology I've refined over years: learn deeply, question constantly, and always start with the user's pain points. Working alongside brilliant engineers, we've built solutions that are fundamentally changing how development teams work with their infrastructure.
+It might seem random, but every dot connected me to building things from scratch.
 
-### Crafting Product Experiences at Mason
-At Mason, I found my groove in a team that helped me become more confident and experimental. We didn't just build products - we crafted experiences that resonated with our community. Our team's dedication led to two successful Product Hunt launches, culminating in winning Product of the Year in the eCommerce category.
+## NRB Bearings
 
-### The Government Innovation Chapter
-My time as an Innovation Fellow with the Government of Telangana stands as a testament to what's possible when vision meets scale. Selected as one of 6 fellows from over 1000 applicants, I chose to focus on grassroots innovation - a decision that would lead to some of my most fulfilling work.
-We didn't just run programs; we transformed how innovation was perceived in tier 2/3 cities. Working across 31+ districts and 30+ colleges, we built a network that supported over 10,000 aspiring entrepreneurs. The impact? Today, Telangana stands as the only state with a dedicated Grassroots Innovation Policy, and our programs continue to nurture new innovators. The impact of our work reached far beyond state borders - Netflix commissioned a movie based on one of our innovators' stories, bringing grassroots innovation to a global audience. Another innovator's work caught international attention, leading to the Ministry of External Affairs commissioning them to gift their innovation to the Government of Kenya, showcasing India's grassroots innovation on the global stage.
-One of my proudest achievements was seeing innovation become a household word in these communities. When an entrepreneur from a small city told me years later that our program had changed his life and led to his startup being incubated at CIE, I knew we had created something truly meaningful.
+I was the only female executive in the shop floor managing processes and innovating to reduce waste by 90%. I built some processes to reduce and reuse wastage which was pioneering. Even today, 7 years later, my old colleagues reach out to me for advice. 
 
-## Early Career Foundations
+## Founding Innovation Fellow, Government of Telangana
 
-### Manufacturing Innovation at NRB Bearings
-At NRB Bearings' Center for Process Innovation and Sustainable Development, I learned the fundamentals of process improvement and sustainable development. Working on the manufacturing floor taught me valuable lessons about quality, efficiency, and the importance of user-centered design - principles that still influence my product decisions today.
+Serendipitously Government of Telangana fellowship happened - a once in a lifetime opportunity to work with the Chief Innovation Officer, Principal Secretary and Minister of IT. 
 
-### Sustainable Development at Five Elements SDG
-My role at Five Elements SDG exposed me to the challenges of sustainable housing and manufacturing. Through extensive market research and vendor partnerships for fiberglass composite materials, I gained insights into how products come to life from concept to manufacturing - knowledge that proves invaluable in my product management journey.
+I was one among 6 fellows (out of 1000+ applicants!) for the founding batch of Innovation fellowship. They gave us different mandates to choose from - grassroots innovation, school innovation, investor ecosystem, Hyderabad startup ecosystem, and more. I picked grassroots innovation, and honestly, it turned out to be one of the most fulfilling choices I've ever made.
 
-## The AI Frontier
+I collaborated with hundreds of organisations, colleges, schools - Invest India, Ministry of External Affairs, HoneyBee Network, News Network etc. to design programs and implement them at the grassroots for promoting and nurturing innovation and entrepreneurship. I launched campaigns, did entrepreneurship workshops and what not. 
 
-Currently, as a Product Consultant at Mantis, I'm exploring the fascinating world of AI workflows. We're building systems that automate website development, product creation, and marketing collateral generation - pushing the boundaries of what's possible with AI integration.
+The impact? It still blows my mind. Netflix commissioned a movie about one of our innovators! Another innovator's work was so impressive that the Ministry of External Affairs had them gift their innovation to the Government of Kenya. We created India's only state with a Grassroots Innovation Policy, impacted 10,000+ aspiring entrepreneurs, and worked across 31+ districts and 30+ colleges.
 
-## What I've Learned
-Through this journey, I've discovered that my superpower is the ability to thrive in any domain by:
-- Approaching each challenge with genuine curiosity and a structured learning mindset
-- Building bridges between technical complexity and user needs
-- Creating systems and processes that outlast my involvement
-- Turning vision into reality through careful program design and execution
+Something crazy happened one day. One day, I was waiting for a friend at IIIT Hyderabad when a stranger approached me. He recognized me from an entrepreneurship drive we'd done in his city. He told me how that program led him to get selected for the CIE incubator program, and now he was building his startup. He actually saluted me before leaving! 
 
-Every role has reinforced my belief that the best products come from a deep understanding of user problems, combined with the technical knowledge to solve them effectively. Whether it's developer tools, government programs, or AI solutions, the fundamental principle remains: create lasting impact by solving real problems for real people.
+Everything I started from scratch and now Telangana Innovation Cell is still continuing most of the programs that I have started.
 
-Want to discuss product development, innovation, or how we might collaborate? I'd love to connect!
+## Product Management happened
+
+At Five Elements SDG, I literally cold-called hundreds of fiberglass manufacturers through IndiaMart - wild times but now, I know the fiberglass market inside out! I had to get some huge machine parts manufactured in India for a French company to build sustainable housing. Super interesting project!
+
+Then Mason happened. Something just clicked there. The team helped me find my groove. We did everything from marketing to community building to random startup things. We even launched products on Product Hunt and won Product of the Year in the eCommerce category!
+
+## DevOps & Developer tooling
+
+At Facets.cloud, I became their founding product manager, and here's a secret - on my first day, I asked "What is cloud infrastructure?" Yeah, I was that clueless about the field!
+
+But this is my thing - learn and be curious. I took courses, bugged our engineers with endless questions, and talked to every customer I could find to understand DevOps from their perspective. I realized something important - my superpower isn't knowing everything, it's being able to thrive in any field where there are interesting problems to solve.
+
+I can jump into the things and figure out things. And, I enjoy building products and features from scratch. That’s exactly what I did at Facets. Every feature, every flow and every page was implemented by me. 
+
+## Now: Building with AI
+
+These days, I'm at Mantis as a Product Consultant, diving deep into AI. We're building AI workflows for websites, products, marketing collateral - you name it. It's like every experience I've had is coming together in this wild world of AI and product development.
+
+## Connecting The Final Dots
+
+Looking back now, I can finally see how it all fits. That manufacturing experience? It taught me how to break down complex processes and make them better - something I use every day in product management. My time in government showed me how to create impact at scale, which is crucial when building products that serve thousands of users. Even those cold calls to manufacturers? They taught me persistence and how to really understand user needs.
+
+You see, when I was standing on that manufacturing floor, I couldn't have predicted I'd be building AI products today. When I was working with grassroots innovators, I didn't know I'd use those skills to understand developer pain points. As Steve Jobs said, you have to trust that the dots will somehow connect in your future. You have to trust in something - your gut, destiny, life, karma, whatever.
+
+I trusted my instinct to solve meaningful problems wherever I found them. And somehow, all these seemingly random dots - manufacturing, government innovation, startups, tech - they've connected to give me a unique perspective on building products from scratch that matter.
+
+I'm still collecting dots, still learning, still creating impact wherever I go. If you're working on something interesting where these connected experiences might help, let's talk! I'm always up for a good conversation about innovation, product development, or really anything that involves solving meaningful problems.
