Documentation edits made through Mintlify web editor

--- a/aboutme.mdx
+++ b/aboutme.mdx
@@ -1,14 +1,17 @@
 ---
-title: Hi! I am Sri Nikitha
+title: "Hi! I am Sri Nikitha"
 sidebarTitle: "About Me"
 ---
 
-I'm a full-time problem solver and a part-time product manager, working across B2B dev tools, industrial waste management, and grassroots innovation for the last 7+ years.
+I'm a full-time problem solver and a part-time product manager, working across B2B dev tools, industrial waste management, and grassroots innovation for the last 7\+ years.
 
-Lately, I've been fascinated with how the AI can affect DevOps workflows and work as a PM + GTM consultant with [Mantis AI](https://getmantis.ai/).
+Lately, I've been fascinated with how the AI can affect DevOps workflows and work as a PM \+ GTM consultant with [Mantis AI](https://getmantis.ai/). Currently, I'm consulting for **DrDroid**, an AI SRE agent for automatic debugging and resolution of issues.
 
 <Frame>
-<img src="/images/srinikitha@vietnam.jpg" width="400" />
+  <img
+    src="/images/srinikitha@vietnam.jpg"
+    width="400"
+  />
 </Frame>
 
 ## My Background
@@ -16,7 +19,10 @@ Lately, I've been fascinated with how the AI can affect DevOps workflows and wor
 Here's some more context about me that may help you form a better image about me:
 
 <Frame>
-<img src="/images/logos.png" width="600" />
+  <img
+    src="/images/logos.png"
+    width="600"
+  />
 </Frame>
 
 - First generation to be educated and earn a degree.
@@ -26,13 +32,16 @@ Here's some more context about me that may help you form a better image about me
 - Recently became a mother, figuring my shit out and realising how mothers are a different breed
 
 ## Why I am PM
+
 - Talking to users and figuring out what they need is my favourite
 - And, ofcourse, I love to build things
 
 ## Books/Articles I Like
+
 - The Little Prince
 - The Art of Learning(my latest read)
 - Alchemist
 
 ## Movies I Like
+
 - Three Idiots(Got so influenced that I got a job to work with Sonam Wangchuk)
